--- a/frontend/src/components/Home/Board/board.sass
+++ b/frontend/src/components/Home/Board/board.sass
@@ -1,4 +1,4 @@
 #Board
   margin: 0
   padding: 0 1rem
-  min-width: 50rem
+  min-width: 65rem
