--- a/frontend/src/components/Home/Header/header.sass
+++ b/frontend/src/components/Home/Header/header.sass
@@ -1,11 +1,13 @@
 @use '../../../misc/vars'
 
 #Header
+  min-width: 65rem
+
   .Logo
     display: flex
     justify-content: center
     background-color: vars.$maize-crayola
-    width: 100vw
+    width: 100%
     min-width: 50rem
     height: 4.9rem
     top: 0
@@ -19,7 +21,7 @@
     background-color: vars.$true-blue
     margin-bottom: 1rem
     box-shadow: 0 .3rem .4rem 0.001rem rgba(67, 67, 67, 50%)
-    width: 100vw
+    width: 100%
     min-width: 50rem
     position: relative
 
